--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/NavMenuPartial.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/NavMenuPartial.cshtml
@@ -13,9 +13,11 @@
                 @* <li class="nav-item"> *@
                 @*     <a class="nav-link active" asp-controller="Home" asp-action="Index">Página Inicial</a> *@
                 @* </li> *@
-                @* <li class="nav-item "> *@
-                @*     <a class="nav-link active" asp-controller="Product" asp-action="Index">Produtos</a> *@
-                @* </li> *@
+                
+                <li class="nav-item ">
+                    <a class="nav-link active" asp-controller="Product" asp-action="Index">Produtos</a>
+                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link active" asp-controller="Service" asp-action="Index">Serviços</a>
                 </li>
