--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
@@ -1,14 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using PetWorldOficial.Domain.Enums
+@using PetworldOficial.MVC.Utils
 @model PetWorldOficial.Application.Commands.Animal.DeleteAnimalCommand
 
 @{
     ViewData["Title"] = "Deletar Pet";
     Layout = "_Layout";
+    var gender = (EGender)Enum.Parse(typeof(EGender), Model.Gender);
 }
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw"><img src="/Images/DadosDoPet.png" alt=""></h2>
+    <h2 class="display-6 text-center fw">
+        <img src="/Images/DadosDoPet.png" alt="">
+    </h2>
     <br>
 </div>
 
@@ -37,6 +42,7 @@
         <input type="hidden" asp-for="@Model.UserId">
         <input type="hidden" asp-for="@Model.CategoryId">
         <input type="hidden" asp-for="@Model.RaceId">
+        <input type="hidden" asp-for="@Model.Gender" value="@Model.Gender"/>
 
         <div class="col-md-6">
             <label asp-for="@Model.Name" class="form-label">Nome</label>
@@ -44,8 +50,8 @@
         </div>
 
         <div class="col-md-2">
-            <label asp-for="@Model.Gender" class="form-label">Gênero</label>
-            <input asp-for="@Model.Gender" type="text" class="form-control shadow-none" placeholder="Descrição" readonly>
+            <label asp-for="Gender" class="form-label">Gênero</label>
+            <input type="text" class="form-control shadow-none" placeholder="Descrição" value="@gender.GetDisplayName()" readonly/>
         </div>
 
         <div class="col-md-8">
