--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -64,7 +64,7 @@ else if (TempData["SuccessMessage"] != null)
             {
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
-                        <img style="width: 100%; max-height: 300px"src="/Images/078521a9-722b-4da7-9cde-cda288534b9a.jpg" class="card-img-top" alt="...">
+                        <img style="width: 100%; max-height: 300px" src="/Images/078521a9-722b-4da7-9cde-cda288534b9a.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             @if (animal.Gender.Equals(EGender.Female.ToString()))
                             {
@@ -113,6 +113,15 @@ else
 {
     <div class="container-fluid text-black py-3">
         <br>
-        <h2 class="display-6 text-center fw">@TempData["NotFoundPetMessage"]</h2>
+        <h2 class="text-center text-muted" style="font-size: 23px; font-weight: normal;">
+            @TempData["NotFoundPetMessage"]
+        </h2>
+        <br>
+
+        <div class="d-flex justify-content-center align-items-center">
+            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Animal" asp-action="Register">
+                <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Pet
+            </a>
+        </div>
     </div>
 }
