--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PetWorldOficial.Domain.Enums
+@using PetworldOficial.MVC.Utils
 @model PetWorldOficial.Application.Commands.User.RegisterUserCommand
 
 @{
@@ -47,9 +48,9 @@ else if (TempData["SuccessMessage"] != null)
         <label asp-for="@Model.Gender" class="form-label">Gênero <span style="color: red;">*</span></label>
         <select asp-for="@Model.Gender" class="form-select shadow-none">
             <option value="" selected disabled>Selecione o gênero</option>
-            @foreach (var gender in Enum.GetValues(typeof(EGender)))
+            @foreach (EGender gender in Enum.GetValues(typeof(EGender)))
             {
-                <option value="@gender">@gender</option>
+                <option value="@gender">@gender.GetDisplayName()</option>
             }
         </select>
         <span asp-validation-for="Gender" class="text-danger"></span>
