--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
@@ -1,57 +1,74 @@
-﻿@* @using Microsoft.AspNetCore.Mvc.TagHelpers *@
-@* @model RegisterProductDTO *@
-@* *@
-@* @{ *@
-@*     ViewData["Title"] = "Criar Produto"; *@
-@*     Layout = "_LayoutCRUD"; *@
-@* } *@
-@*      *@
-@* <div class="container-fluid text-black py-3"> *@
-@*     <br> *@
-@*     <h2 class="display-6 text-center fw">Dados do Produto</h2> *@
-@*     <br> *@
-@* </div> *@
-@* *@
-@* <div class="container"> *@
-@*     <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Create" method="post"> *@
-@*              *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.Name" class="form-label">Nome<span style="color: red;">*</span></label> *@
-@*             <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome" required> *@
-@*         </div> *@
-@* *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.Description" class="form-label">Descrição<span style="color: red;">*</span></label> *@
-@*             <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Descrição" required> *@
-@*         </div> *@
-@* *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.Price" class="form-label">Preço<span style="color: red;">*</span></label> *@
-@*             <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço" required> *@
-@*         </div> *@
-@*          *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.SupplierId" class="form-label">Fornecedor<span style="color: red;">*</span></label> *@
-@*             <select asp-for="@Model.SupplierId" class="form-select shadow-none" required> *@
-@*                 <option value="" selected disabled>Selecione um fornecedor</option> *@
-@*                 @foreach (var supplier in Model.Suppliers!) *@
-@*                 { *@
-@*                     <option value="@supplier.Id">@supplier.Company</option> *@
-@*                 } *@
-@*             </select> *@
-@*         </div> *@
-@*              *@
-@*         <div class="col-md-8"> *@
-@*             <label class="form-label">Imagem<span style="color: red;">*</span></label> *@
-@*             <input type="file" class="form-control shadow-none" name="file" placeholder="Escolha uma imagem"> *@
-@*         </div> *@
-@*         <div class="d-grid gap-2 col-4 mx-auto col-md-5"> *@
-@*             <br> *@
-@*             <button class="btn btn-dark btn-lg" type="submit">Cadastrar</button> *@
-@*         </div> *@
-@*     </form> *@
-@*          *@
-@*     <footer> *@
-@* *@
-@*     </footer> *@
-@* </div> *@
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model PetWorldOficial.Application.Commands.Product.CreateProductCommand
+
+@{
+    ViewData["Title"] = "Criar Produto";
+    Layout = "_LayoutCRUD";
+}
+
+<div class="container-fluid text-black py-3">
+    <br>
+    <h2 class="display-6 text-center fw">Dados do Produto</h2>
+    <br>
+</div>
+
+<div class="container">
+    <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Create" method="post">
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Name" class="form-label">Nome <span style="color: red;">*</span></label>
+            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome">
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Description" class="form-label">Descrição <span style="color: red;">*</span></label>
+            <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Descrição">
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Price" class="form-label">Preço <span style="color: red;">*</span></label>
+            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço">
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.CategoryId" class="form-label">Categoria <span style="color: red;">*</span></label>
+            <select asp-for="@Model.CategoryId" class="form-select shadow-none">
+                <option value="" selected disabled>Selecione um categoria</option>
+                @foreach (var category in Model.Categories)
+                {
+                    <option value="@category.Id">@category.Title</option>
+                }
+            </select>
+            <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.SupplierId" class="form-label">Fornecedor <span style="color: red;">*</span></label>
+            <select asp-for="@Model.SupplierId" class="form-select shadow-none">
+                <option value="" selected disabled>Selecione um fornecedor</option>
+                @foreach (var supplier in Model.Suppliers)
+                {
+                    <option value="@supplier.Id">@supplier.Name</option>
+                }
+            </select>
+            <span asp-validation-for="SupplierId" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.File" class="form-label">Imagem <span style="color: red;">*</span></label>
+            <input asp-for="@Model.File" type="file" class="form-control shadow-none" name="file" placeholder="Escolha uma imagem">
+            <span asp-validation-for="File" class="text-danger"></span>
+        </div>
+        <div class="d-grid gap-2 col-4 mx-auto col-md-5">
+            <br>
+            <button class="btn btn-dark btn-lg" type="submit">Cadastrar</button>
+        </div>
+    </form>
+
+    <footer>
+
+    </footer>
+</div>
