--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using PetWorldOficial.Application.ViewModels.Service
 @using PetWorldOficial.Domain.Enums
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model IEnumerable<ServiceDetailsViewModel?>
 
 @{
@@ -22,7 +23,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 }
-else if (TempData["SuccessMessage"] != null)
+
+@if (TempData["SuccessMessage"] != null)
 {
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         @TempData["SuccessMessage"]
@@ -49,9 +51,14 @@ else if (TempData["SuccessMessage"] != null)
                         <img src="/Images/@service!.ImageUrl" class="ImagemCard card-img-top" alt="..." style="height: 200px; object-fit: cover; width: 100%">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">@service.Name</h5>
-                            <p>
-                                <b>Valor:</b> @service.Price!.ToString("C")
-                            </p>
+                            <br>
+                            <div>
+                                <b>Valor:</b> @service.Price.ToString("C")
+                            </div>
+                            <div>
+                                <b>Duração:</b> @service.DurationInMinutes minutos
+                            </div>
+                            <br>
 
                             @if (!User.IsInRole(ERole.Admin.ToString()))
                             {
