--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Index.cshtml
@@ -39,8 +39,8 @@
         @if (User.IsInRole(ERole.Admin.ToString()))
         {
             <div class="pb-2">
-                <a class="btn btn-dark fw-normal shadow-none" asp-controller="Service" asp-action="Create">
-                    <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Serviço
+                <a class="btn btn-dark fw-normal shadow-none" asp-controller="Product" asp-action="Create">
+                    <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Produto
                 </a>
             </div>
         }
@@ -49,15 +49,10 @@
             {
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
-                        <img src="/Images/@product!.ImageUrl" class="ImagemCard card-img-top" alt="..." style="height: 200px; object-fit: cover; width: 100%">
+                        <img src="/Images/@product.ImageUrl" class="ImagemCard card-img-top" alt="..." style="height: 200px; object-fit: cover; width: 100%">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">@product.Name</h5>
                             <br>
-
-                            <div>
-                                <p>@product.Description</p>
-                            </div>
-
                             <div>
                                 <b>Valor:</b> @product.Price.ToString("C")
                             </div>
@@ -66,17 +61,17 @@
                             @if (!User.IsInRole(ERole.Admin.ToString()))
                             {
                                 <div class="d-grid gap-2">
-                                    <a class="btn btn-dark" asp-controller="Schedule" asp-action="Create" asp-route-id="@product.Id">Adicionar ao carrinho</a>
+                                    <a class="btn btn-dark" asp-route-id="@product.Id">Adicionar ao carrinho</a>
                                 </div>
                             }
                             else
                             {
                                 <div class="d-flex justify-content-center align-items-center">
                                     <div style="padding-right: 15px">
-                                        <a style="width: 100px;" asp-controller="Service" asp-action="Update" asp-route-id="@product.Id" class="btn btn-dark me-2 shadow-none">Editar</a>
+                                        <a style="width: 100px;" asp-route-id="@product.Id" class="btn btn-dark me-2 shadow-none">Editar</a>
                                     </div>
                                     <div style="padding-left: 15px">
-                                        <a style="width: 100px" class="btn btn-danger shadow-none" asp-controller="Service" asp-action="Delete" asp-route-id="@product.Id">
+                                        <a style="width: 100px" class="btn btn-danger shadow-none" asp-route-id="@product.Id">
                                             Excluir
                                         </a>
                                     </div>
