--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/_Layout.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/_Layout.cshtml
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true"/>
     <link rel="icon" href="/Images/faviconPaw.ico">
 </head>
-<body>
+<body style="background-color: #e9e9e9">
 <header>
     <partial name="NavMenuPartial"></partial>
 </header>
-<div class="container">
-    <main role="main" class="pb-3">
-        @RenderBody()
+    <div class="container">
+        <main role="main" class="pb-3" >
+            @RenderBody()
     </main>
 </div>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
