--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
@@ -34,6 +34,12 @@
         </div>
 
         <div class="col-md-8">
+            <label asp-for="@Model.Quantity" class="form-label">Quantidade <span style="color: red;">*</span></label>
+            <input asp-for="@Model.Quantity" type="text" class="form-control shadow-none" placeholder="Preço">
+            <span asp-validation-for="Quantity" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
             <label asp-for="@Model.CategoryId" class="form-label">Categoria <span style="color: red;">*</span></label>
             <select asp-for="@Model.CategoryId" class="form-select shadow-none">
                 <option value="" selected disabled>Selecione um categoria</option>
@@ -69,6 +75,5 @@
     </form>
 
     <footer>
-
     </footer>
 </div>
