--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
@@ -1,53 +1,73 @@
-﻿@* @using Microsoft.AspNetCore.Mvc.TagHelpers *@
-@* @model DeleteProductDTO *@
-@* @{ *@
-@*     ViewData["Title"] = "Deletar Produto"; *@
-@*     Layout = "_LayoutCRUD"; *@
-@* } *@
-@* *@
-@* <div class="container-fluid text-black py-3"> *@
-@*     <br> *@
-@*     <h2 class="display-6 text-center fw">Dados do Produto</h2> *@
-@*     <br> *@
-@* </div> *@
-@* *@
-@* <div class="d-flex justify-content-center align-items-center"> *@
-@*     <img style="width: 350px;" src="\Images/@Model.Image" alt="AQUI"> *@
-@* </div> *@
-@* *@
-@* <div class="container"> *@
-@*     <br> *@
-@*     <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Delete" method="post"> *@
-@* *@
-@* *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.Id" class="form-label">Id</label> *@
-@*             <input asp-for="@Model.Id" type="text" class="form-control shadow-none" placeholder="Id" readonly> *@
-@*         </div> *@
-@* *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.Name" class="form-label">Nome</label> *@
-@*             <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Nome" readonly> *@
-@*         </div> *@
-@* *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.Description" class="form-label">Descrição</label> *@
-@*             <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Descrição" readonly> *@
-@*         </div> *@
-@*          *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.Price" class="form-label">Preço</label> *@
-@*             <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço" readonly> *@
-@*         </div> *@
-@*          *@
-@*         <div class="col-md-8"> *@
-@*             <label asp-for="@Model.Supplier.Company" class="form-label">Fornecedor</label> *@
-@*             <input asp-for="@Model.Supplier.Company" type="text" class="form-control shadow-none" placeholder="Descrição" readonly> *@
-@*         </div> *@
-@*          *@
-@*         <div class="d-grid gap-2 col-4 mx-auto col-md-5"> *@
-@*             <br> *@
-@*             <button class="btn btn-dark btn-lg" type="submit">Deletar</button> *@
-@*         </div> *@
-@*     </form> *@
-@* </div> *@
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using PetWorldOficial.Application.Commands.Product
+@model DeleteProductCommand
+
+@{
+    ViewData["Title"] = "Deletar Produto";
+    Layout = "_Layout";
+}
+
+<div class="container-fluid text-black py-3">
+    <br>
+    <h2 class="display-6 text-center fw">
+        <img src="/Images/DadosDoServico.png" alt="">
+    </h2>
+    <br>
+</div>
+
+<div class="d-flex justify-content-center align-items-center">
+    <img style="width: 350px;" src="\Images/@Model.ImageUrl" alt="Imagem do Produto">
+</div>
+
+<div class="container">
+    <br>
+    <br>
+    <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Delete" method="post">
+
+        <input type="hidden" asp-for="ImageUrl">
+        <input type="hidden" asp-for="CategoryId">
+        <input type="hidden" asp-for="SupplierId">
+        <input type="hidden" asp-for="LastUpdatedAt">
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Id" class="form-label">Id</label>
+            <input asp-for="@Model.Id" type="text" class="form-control shadow-none" placeholder="Digite o nome" readonly>
+            <span asp-validation-for="@Model.Id" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Name" class="form-label">Nome</label>
+            <input asp-for="@Model.Name" type="text" class="form-control shadow-none" placeholder="Digite o nome" readonly>
+            <span asp-validation-for="@Model.Name" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Description" class="form-label">Descrição</label>
+            <input asp-for="@Model.Description" type="text" class="form-control shadow-none" placeholder="Digite o nome" readonly>
+            <span asp-validation-for="@Model.Description" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.Price" class="form-label">Preço</label>
+            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Digite o preço" readonly>
+            <span asp-validation-for="@Model.Price" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.CategoryName" class="form-label">Descrição</label>
+            <input asp-for="@Model.CategoryName" type="text" class="form-control shadow-none" placeholder="Digite o nome" readonly>
+            <span asp-validation-for="@Model.CategoryName" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.SupplierName" class="form-label">Descrição</label>
+            <input asp-for="@Model.SupplierName" type="text" class="form-control shadow-none" placeholder="Digite o nome" readonly>
+            <span asp-validation-for="@Model.SupplierName" class="text-danger"></span>
+        </div>
+
+        <div class="d-grid gap-2 col-4 mx-auto col-md-5">
+            <br>
+            <button class="btn btn-dark btn-lg" type="submit">Deletar</button>
+        </div>
+    </form>
+</div>
