feat: Criado Handler UpdateProductCommandHandler

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Index.cshtml
@@ -71,7 +71,7 @@
                                         <a style="width: 100px;" asp-route-id="@product.Id" class="btn btn-dark me-2 shadow-none">Editar</a>
                                     </div>
                                     <div style="padding-left: 15px">
-                                        <a style="width: 100px" class="btn btn-danger shadow-none" asp-route-id="@product.Id">
+                                        <a style="width: 100px" class="btn btn-danger shadow-none" asp-route-id="@product.Id" asp-controller="Product" asp-action="Delete">
                                             Excluir
                                         </a>
                                     </div>
