--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
@@ -20,6 +20,7 @@
     <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Update" method="post">
         <input type="hidden" asp-for="@Model.ImageUrl" />
         <input type="hidden" asp-for="@Model.Id" />
+        <input type="hidden" asp-for="@Model.ProductId" />
 
         <div class="col-md-8">
             <label asp-for="@Model.Name" class="form-label">Nome <span style="color: red;">*</span></label>
