feat: Adicionada propriedade ImageUrl para a entidade Animal

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
@@ -9,7 +9,10 @@
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw"><img src="/Images/DadosDoCadastro.png" alt=""></h2>
+    <h2 class="text-center">
+        @*         <img src="/Images/DadosDoCadastro.png" alt="">*@
+        Dados do Cadastro
+    </h2>
     <br>
 </div>
 @if (TempData["ErrorMessage"] != null)
