--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -18,15 +18,23 @@
     <br>
     @if (User.IsInRole(ERole.Admin.ToString()))
     {
-        <h1 class="display-6 text-center fw-normal">
-            <img src="/Images/ListaDePets.png" alt="">
-        </h1>
+        <div class="container-fluid text-black py-3">
+            <br>
+            <h2 class="text-center">
+                Lista de Pets
+            </h2>
+            <br>
+        </div>
     }
     else
     {
-        <h1 class="display-6 fw-normal">
-            <img src="/Images/MeusPets.png" alt="">
-        </h1>
+        <div class="container-fluid text-black py-3">
+            <br>
+            <h2 class="text-center">
+                Meus Pets
+            </h2>
+            <br>
+        </div>
     }
     <br>
 </div>
@@ -64,7 +72,7 @@ else if (TempData["SuccessMessage"] != null)
             {
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
-                        <img style="width: 100%; max-height: 300px" src="/Images/078521a9-722b-4da7-9cde-cda288534b9a.jpg" class="card-img-top" alt="...">
+                        <img style="width: 100%; max-height: 300px" src="/Images/PetImage.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             @if (animal.Gender.Equals(EGender.Female.ToString()))
                             {
@@ -90,6 +98,19 @@ else if (TempData["SuccessMessage"] != null)
                             <p>
                                 <b>Raça:</b> @animal.Race.Name
                             </p>
+
+                            @if (animal.BirthDate != null)
+                            {
+                                <p>
+                                    <b>Idade:</b> @(DateTime.Now.Year - animal.BirthDate!.Value.Year) anos
+                                </p>
+                            }
+                            else
+                            {
+                                <p>
+                                    <b>Idade:</b> Não consta.
+                                </p>
+                            }
                             <br>
                             <div class="d-flex justify-content-center align-items-center">
                                 <div style="padding-right: 15px">
