--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
@@ -10,8 +10,8 @@
 
 <div class="container-fluid text-black py-3">
     <br>
-    <h2 class="display-6 text-center fw">
-        <img src="/Images/DadosDoPet.png" alt="">
+    <h2 class="text-center">
+        Dados do Pet
     </h2>
     <br>
 </div>
@@ -36,7 +36,7 @@ else if (TempData["SuccessMessage"] != null)
 }
 
 <div class="container">
-    <form class="row g-3 d-flex justify-content-center align-items-center" asp-controller="Animal" asp-action="Register" method="post">
+    <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Animal" asp-action="Register" method="post">
         @if (User.IsInRole(ERole.User.ToString()))
         {
             <input type="hidden" asp-for="@Model.UserId">
@@ -60,7 +60,7 @@ else if (TempData["SuccessMessage"] != null)
             <span asp-validation-for="Gender" class="text-danger"></span>
         </div>
 
-        @if (Model.Users.Count() > 0)
+        @if (Model != null && Model.Users.Count() > 0)
         {
             <div class="col-md-8">
                 <label asp-for="@Model.UserId" class="form-label">Dono <span style="color: red;">*</span></label>
@@ -81,15 +81,15 @@ else if (TempData["SuccessMessage"] != null)
                 <option value="" selected disabled>Selecione a raça</option>
                 @foreach (var race in Model.Races)
                 {
-                    <option value="@race!.Id">@race.Name</option>
+                    <option value="@race!.Id">@race!.Name</option>
                 }
             </select>
             <span asp-validation-for="RaceId" class="text-danger"></span>
         </div>
 
         <div class="col-md-2">
-            <label asp-for="@Model.Age" class="form-label">Idade</label>
-            <input asp-for="@Model.Age" type="text" class="form-control shadow-none" placeholder="Digite a idade">
+            <label asp-for="@Model.BirthDate" class="form-label">Idade</label>
+            <input asp-for="@Model.BirthDate" type="date" min="@DateTime.Today.AddYears(-20).ToString("yyyy-MM-dd")" max="@DateTime.Today.ToString("yyyy-MM-dd")" class="form-control shadow-none" placeholder="Digite a data de nasc.">
         </div>
 
         <div class="col-md-8">
@@ -98,10 +98,16 @@ else if (TempData["SuccessMessage"] != null)
                 <option value="" selected disabled>Selecione a categoria</option>
                 @foreach (var category in Model.Categories)
                 {
-                    <option value="@category!.Id">@category.Title</option>
+                    <option value="@category!.Id">@category!.Title</option>
                 }
             </select>
             <span asp-validation-for="CategoryId" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
+            <label asp-for="@Model.File" class="form-label">Imagem <span style="color: red;">*</span></label>
+            <input asp-for="@Model.File" type="file" class="form-control shadow-none" name="file" placeholder="Escolha uma imagem">
+            <span asp-validation-for="File" class="text-danger"></span>
         </div>
 
         <div class="d-grid gap-2 col-4 mx-auto col-md-5">
