--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
@@ -72,8 +72,8 @@
         </div>
 
         <div class="col-md-2">
-            <label asp-for="@Model.Age" class="form-label">Idade</label>
-            <input asp-for="@Model.Age" type="text" class="form-control shadow-none" value="@Model.Age">
+            <label asp-for="@Model.BirthDate" class="form-label">Data de Nascimento</label>
+            <input asp-for="@Model.BirthDate" type="text" class="form-control shadow-none" value="@Model.BirthDate">
         </div>
 
         <div class="col-md-8">
