--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/_Layout.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true"/>
     <link rel="icon" href="/Images/faviconPaw.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body style="background-color: #e9e9e9">
 <header>
