--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Register.cshtml
@@ -88,8 +88,8 @@ else if (TempData["SuccessMessage"] != null)
         </div>
 
         <div class="col-md-2">
-            <label asp-for="@Model.BirthDate" class="form-label">Idade</label>
-            <input asp-for="@Model.BirthDate" type="date" min="@DateTime.Today.AddYears(-20).ToString("yyyy-MM-dd")" max="@DateTime.Today.ToString("yyyy-MM-dd")" class="form-control shadow-none" placeholder="Digite a data de nasc.">
+            <label asp-for="@Model!.BirthDate" class="form-label">Data de Nascimento</label>
+            <input asp-for="@Model!.BirthDate" type="date" min="@DateTime.Today.AddYears(-20).ToString("yyyy-MM-dd")" max="@DateTime.Today.ToString("yyyy-MM-dd")" class="form-control shadow-none" placeholder="Digite a data de nasc.">
         </div>
 
         <div class="col-md-8">
