--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Create.cshtml
@@ -27,7 +27,7 @@
                     <p>Você não possui um pet registrado! Para registrar um pet clique em continuar.</p>
                 </div>
                 <div class="modal-footer">
-                    <a asp-controller="Service" asp-action="Index" class="btn btn-secondary shadow-none">Fechar</a>
+                    <a asp-controller="Service" asp-action="Index" class="btn btn-secondary shadow-none">Voltar</a>
                     <a asp-controller="Animal" asp-action="Register" class="btn btn-primary shadow-none">Continuar</a>
                 </div>
             </div>
@@ -62,20 +62,25 @@ else if (TempData["SuccessMessage"] != null)
 
 <div class="container">
     <form class="row g-3 d-flex justify-content-center align-items-center" asp-controller="Schedule" asp-action="Create" method="post">
-        <input type="hidden" asp-for="@Model.ServiceId">
-        <input type="hidden" asp-for="@Model.ServicePrice">
-        <input type="hidden" asp-for="@Model.UserId">
+        <input type="hidden" asp-for="@Model.ServiceId" value="@Model.ServiceId">
+        <input type="hidden" asp-for="@Model.ServicePrice" value="@Model.ServicePrice">
+        <input type="hidden" asp-for="@Model.UserId" value="@Model.UserId">
+        <input type="hidden" id="durationInMinutes" asp-for="@Model.DurationInMinutes" value="@Model.DurationInMinutes">
+
 
         <div class="col-md-4">
             <label asp-for="@Model.Date" class="form-label">Data <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Date" id="date" class="form-control shadow-none" type="date"
+            <input asp-for="@Model.Date" id="date" class="form-control shadow-none" type="date" value="@DateTime.Today.ToString("yyyy-MM-dd")"
                    min="@DateTime.Today.ToString("yyyy-MM-dd")" max="@DateTime.Today.AddDays(20).ToString("yyyy-MM-dd")" asp-format="{0:dd/mm/aaaa}">
             <span asp-validation-for="@Model.Date" class="text-danger"></span>
         </div>
 
         <div class="col-md-4">
             <label asp-for="@Model.Time" class="form-label">Horário <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Time" id="time" class="form-control shadow-none" type="time" min="08:00" max="18:00">
+            <select asp-for="@Model.Time" id="time" class="form-select shadow-none">
+                <option value="" selected disabled>Selecione um horário</option>
+                <!-- Horários disponíveis serão preenchidos aqui via AJAX -->
+            </select>
             <span asp-validation-for="@Model.Time" class="text-danger"></span>
         </div>
 
@@ -93,7 +98,7 @@ else if (TempData["SuccessMessage"] != null)
 
         <div class="col-md-8">
             <label asp-for="@Model.ServiceName" class="form-label">Serviço <span style="color: red;">*</span></label>
-            <input asp-for="@Model.ServiceName" class="form-control shadow-none" type="text" readonly>
+            <input asp-for="@Model.ServiceName" id="serviceName" class="form-control shadow-none" type="text" readonly>
             <span asp-validation-for="@Model.ServiceName" class="text-danger"></span>
         </div>
 
@@ -104,16 +109,66 @@ else if (TempData["SuccessMessage"] != null)
         </div>
 
         <div class="col-md-8">
+            <label asp-for="@Model.DurationInMinutes" class="form-label">Duração em minutos <span style="color: red;">*</span></label>
+            <input asp-for="@Model.DurationInMinutes" class="form-control shadow-none" type="text" value="@Model.DurationInMinutes" readonly>
+            <span asp-validation-for="@Model.DurationInMinutes" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-8">
             <label asp-for="@Model.Observation" class="form-label">Observação</label>
             <textarea asp-for="@Model.Observation" class="form-control shadow-none" placeholder="Escreva uma observação" style="height: 100px"></textarea>
             <span asp-validation-for="@Model.Observation" class="text-danger"></span>
         </div>
+
         <div class="col-md-5 d-grid gap-2 col-4 mx-auto">
             <br>
             <button class="btn btn-dark btn-lg shadow-none" type="submit">Agendar</button>
         </div>
     </form>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        function fetchAvailableTimes() {
+            var selectedDate = $('#date').val();
+            var durationInMinutes = $('#durationInMinutes').val();
+            var serviceName = $('#serviceName').val();
+            if (selectedDate) {
+                $.ajax({
+                    url: '@Url.Action("GetAvailableTimes", "Schedule")',
+                    type: 'GET',
+                    data: { 
+                        date: selectedDate,
+                        durationInMinutes: durationInMinutes,
+                        serviceName: serviceName
+                    },
+                    success: function (data) {
+                        var timeSelect = $('#time');
+                        timeSelect.empty(); // Limpa os horários atuais
+                        timeSelect.append('<option value="" selected disabled>Selecione um horário</option>');
+                        $.each(data, function (index, value) {
+                            timeSelect.append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        console.error('Erro ao buscar horários disponíveis:', error);
+                    }
+                });
+            }
+        }
+
+        // Chama a função para buscar os horários ao carregar a página
+        fetchAvailableTimes();
+
+        // Reexecuta a função ao alterar a data
+        $('#date').change(function () {
+            fetchAvailableTimes();
+        });
+    });
+</script>
+
+
 <footer>
 
 </footer>
