--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using MediatR.Pipeline
 @model PetWorldOficial.Application.Commands.Schedule.UpdateSchedulingCommand
 
 @{
@@ -61,9 +62,10 @@ else if (TempData["SuccessMessage"] != null)
 }
 
 <div class="container">
-    <form class="row g-3 d-flex justify-content-center align-items-center" asp-controller="Schedule" asp-action="Create" method="post">
+    <form class="row g-3 d-flex justify-content-center align-items-center" asp-controller="Schedule" asp-action="Update" method="post">
         <input type="hidden" asp-for="@Model.ServiceId" value="@Model.ServiceId">
         <input type="hidden" asp-for="@Model.ServicePrice" value="@Model.ServicePrice">
+        <input type="hidden" asp-for="@Model.SchedulingId" value="@Model.SchedulingId">
         <input type="hidden" asp-for="@Model.UserId" value="@Model.UserId">
         <input type="hidden" asp-for="@Model.AnimalId" value="@Model.AnimalId">
         <input type="hidden" id="durationInMinutes" asp-for="@Model.DurationInMinutes" value="@Model.DurationInMinutes">
@@ -87,17 +89,16 @@ else if (TempData["SuccessMessage"] != null)
             <span asp-validation-for="@Model.Time" class="text-danger"></span>
         </div>
 
-
         <div class="col-md-8">
             <label asp-for="@Model.AnimalName" class="form-label">Pet<span style="color: red;">*</span></label>
-            <input type="text" asp-for="@Model.AnimalName" value="@Model.AnimalName" class="form-select shadow-none" readonly>
+            <input type="text" asp-for="@Model.AnimalName" value="@Model.AnimalName" class="form-control shadow-none" readonly>
             <span asp-validation-for="@Model.AnimalName" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.EmployeeId" class="form-label">Funcionário <span style="color: red;">*</span></label>
             <select asp-for="@Model.EmployeeId" id="employee" class="form-select shadow-none">
-                <option value="@Model.EmployeeId!.Value" selected>@Model.EmployeeName</option>
+                <option value="" selected>Selecione um funcionário</option>
                 <!-- Horários disponíveis serão preenchidos aqui via AJAX -->
             </select>
             <span asp-validation-for="@Model.EmployeeId" class="text-danger"></span>
